fixed navbar overflow

--- a/app/assets/stylesheets/api/shops.scss
+++ b/app/assets/stylesheets/api/shops.scss
@@ -9,6 +9,7 @@ h1 {
   width: 1000px;
   height: 45px;
   margin: 0 auto;
+  padding-top: 20px;
   position: relative;
   background: #F5F5F1;
 }
